fix: align faq icon in mobile

--- a/style.css
+++ b/style.css
@@ -309,13 +309,13 @@ footer {
   }
 
   .hero-buttons {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     gap: 10px;
   }
 
   .main input {
-    width: 80vw;
+    width: 60vw;
   }
 
   .btn-red {
@@ -344,8 +344,9 @@ footer {
   }
 
   .faqbox {
-        flex-direction: column;
-        align-items: flex-start;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
     }
 
     .footer {
